<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp"
    android:background="@color/background"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_height="120dp"
        android:src="@drawable/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="30dp"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enteryour_account"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/secondary"
        android:textSize="15dp"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/email"
    app:endIconMode="clear_text"
    app:startIconDrawable="@drawable/ic_email"
    app:startIconTint="@color/white"
    app:boxCornerRadiusBottomEnd="8dp"
    app:boxCornerRadiusBottomStart="8dp"
    app:boxCornerRadiusTopEnd="8dp"
    app:boxCornerRadiusTopStart="8dp"
    app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
    android:background="@drawable/shape_buttom"
    app:hintTextColor="@color/text_muted">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@android:color/transparent"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/white"
        app:endIconTint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo"
        app:boxStrokeColor="@color/card"
        android:background="@drawable/shape_buttom"
        app:hintTextColor="@color/text_muted"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="15dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        android:text="@string/login"
        android:backgroundTint="@color/button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/white" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutWithText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="20dp">

        <View
            android:id="@+id/leftLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/textDivider"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/textDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="o continua con"
            android:textColor="@android:color/darker_gray"
            android:textSize="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
        android:drawablePadding="8dp"/>

        <View
            android:id="@+id/rightLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toRightOf="@id/textDivider"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/enteryour_account_google"
        android:textColor="@color/white"
        android:backgroundTint="@color/divider"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_chrome"
        app:iconGravity="start"
        app:iconTint="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
    />
    <TextView
        android:id="@+id/tvNoCounnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="60dp"
        android:textColor="@color/text"
        />
    <TextView
        android:id="@+id/tvRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textColor="@color/button"
        android:layout_marginLeft="140dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>