<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <!-- Mapa real de Google -->
        <fragment
            android:id="@+id/mapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvUbicationDetails"
            android:layout_width="340dp"
            android:backgroundTint="@color/ravvisant_dark_onSecondary"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mapView"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvDatesSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Datos de entrega"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    />

                <!-- Spinner de Departamentos -->
                <Spinner
                    android:id="@+id/spinnerDepartamento"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown"
                    app:cornerRadius="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="30dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/tvDatesSend"
                    android:layout_margin="16dp"/>

                <!-- Spinner de Distritos -->
                <Spinner
                    android:id="@+id/spinnerDistrito"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown"
                    app:cornerRadius="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="30dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/spinnerDepartamento"
                    android:layout_margin="16dp"/>

                <!-- Dirección -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtDireccion"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/location_full"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintTop_toBottomOf="@id/spinnerDistrito"
                    app:startIconDrawable="@drawable/ic_location"
                    app:startIconTint="?attr/colorOnSurfaceVariant">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Teléfono -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPhoneFull"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phone_call"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintTop_toBottomOf="@id/txtDireccion"
                    app:startIconDrawable="@drawable/ic_call_phone"
                    app:startIconTint="?attr/colorOnSurfaceVariant">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPhoneFull"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Notas adicionales -->
                <TextView
                    android:id="@+id/tvAddNots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_notifications"
                    app:layout_constraintTop_toBottomOf="@id/txtPhoneFull"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="25dp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtNotsAditionals"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/intructions"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="20dp"
                    app:endIconMode="clear_text"
                    android:background="@drawable/shape_buttom"
                    app:hintTextColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintTop_toBottomOf="@id/tvAddNots"
                    app:startIconTint="?attr/colorOnSurfaceVariant">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNotsAditionals"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="13dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGuardarUbicacion"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textSize="10dp"
                    android:text="Guardar Ubicación"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="60dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtNotsAditionals"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>